apps/hauliday/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hauliday-frontend
  namespace: hauliday
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hauliday-frontend
