apps/hauliday/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hauliday-frontend
  namespace: hauliday
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: haulidayrentals.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hauliday-frontend
            port:
              number: 80
